5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1594_1806.log
== TEST (2019-04-12 18:13:01) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p(n)=(1-(365!/(365-n)!)*(1/365**n))

print(round(p(n), 2))

-- ERROR:
File "XXXX", line 3
    p(n)=(1-(365!/(365-n)!)*(1/365**n))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 18:13:19) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p(n)=((1-(365!/(365-n)!)*(1/365**n))

print(round(p(n), 2))

-- ERROR:
File "XXXX", line 3
    p(n)=((1-(365!/(365-n)!)*(1/365**n))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 18:13:41) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p(n)=(((1-(365!/(365-n)!)*(1/365**n))

print(round(p(n), 2))

-- ERROR:
File "XXXX", line 3
    p(n)=(((1-(365!/(365-n)!)*(1/365**n))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 18:14:13) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p(n)=(((1-(365!/(365-n)!)*(1/365**n)))

print(round(p(n), 2))

-- ERROR:
File "XXXX", line 3
    p(n)=(((1-(365!/(365-n)!)*(1/365**n)))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 18:14:31) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p(n)=1-(365!/(365-n)!)*(1/365**n)

print(round(p(n), 2))

-- ERROR:
File "XXXX", line 3
    p(n)=1-(365!/(365-n)!)*(1/365**n)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 18:15:35) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p(n)=1-(365 factorial/(365-n)factorial)*(1/365**n)

print(round(p(n), 2))

-- ERROR:
File "XXXX", line 3
    p(n)=1-(365 factorial/(365-n)factorial)*(1/365**n)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:00:01) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p(n)=1-(365!/(365-n)!)*(1/365**n)

print(round(p(n), 2))

-- ERROR:
File "XXXX", line 3
    p(n)=1-(365!/(365-n)!)*(1/365**n)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:00:59) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
factorial(n)=1-(365!/(365-n)!)*(1/365**n)

print(round(factorial(n), 2))

-- ERROR:
File "XXXX", line 3
    factorial(n)=1-(365!/(365-n)!)*(1/365**n)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:09:47) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
factorial(n)=1-(365 factorial(n)/(365-n)factorrial(n))*(1/365**n)

print(round(factorial(n), 2))

-- ERROR:
File "XXXX", line 3
    factorial(n)=1-(365 factorial(n)/(365-n)factorrial(n))*(1/365**n)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:04:14) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p(n)=1-(365!(n)/(365-n)!(n))*(1/365**n)% 100

print(round(p(n), 2))

-- ERROR:
File "XXXX", line 3
    p(n)=1-(365!(n)/(365-n)!(n))*(1/365**n)% 100
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 12:04:44) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p(n)=(1-(365!(n)/(365-n)!(n))*(1/365**n))

print(round(p(n), 2))

-- ERROR:
File "XXXX", line 3
    p(n)=(1-(365!(n)/(365-n)!(n))*(1/365**n))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:25) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p(n)=1-(365!(n)/(365-n)!(n))*(1/365**n)

print(round(p(n), 2))

-- ERROR:
File "XXXX", line 3
    p(n)=1-(365!(n)/(365-n)!(n))*(1/365**n)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:35:41) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p=1-(365!(n)/(365-n)!(n))*(1/365**n)

print(round(p, 2))

-- ERROR:
File "XXXX", line 3
    p=1-(365!(n)/(365-n)!(n))*(1/365**n)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:19) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p=1-(365!/(365-n)!(n))*(1/365**n)

print(round(p, 2))

-- ERROR:
File "XXXX", line 3
    p=1-(365!/(365-n)!(n))*(1/365**n)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:05) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
p=(1-(365!/(365-n)!(n))*(1/365**n))

print(round(p, 2))

-- ERROR:
File "XXXX", line 3
    p=(1-(365!/(365-n)!(n))*(1/365**n))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:42:30) 
-- CODE:
from math import factorial
n=float(input("Digite um numero: "))
p=(1-(365!/(365-n)!(n))*(1/365**n))

print(round(p, 2))

-- ERROR:
File "XXXX", line 3
    p=(1-(365!/(365-n)!(n))*(1/365**n))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:43:16) 
-- CODE:
from math import factorial
n=float(input("Digite um numero: "))
p=(1-(365!/(365-n)!*(1/365**n))

print(round(p, 2))

-- ERROR:
File "XXXX", line 3
    p=(1-(365!/(365-n)!*(1/365**n))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:22) 
-- CODE:
from math import factorial
n=float(input("Digite um numero: "))
p(n)= 1 - 365!/(365 - n)!*1/365**n

print(round(p, 2))

-- ERROR:
File "XXXX", line 3
    p(n)= 1 - 365!/(365 - n)!*1/365**n
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:47:28) 
-- CODE:
from math import factorial
n=float(input("Digite um numero: "))
p(n)= ((1 - 365!/(365 - n)!*1/365**n)/100)

print(round(p, 2))

-- ERROR:
File "XXXX", line 3
    p(n)= ((1 - 365!/(365 - n)!*1/365**n)/100)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:49:21) 
-- CODE:
from math import factorial
n=float(input("Digite um numero: "))
factorial(n)= ((1 - 365!/(365 - n)!*1/365**n)/100)

print(round(p, 2))

-- ERROR:
File "XXXX", line 3
    factorial(n)= ((1 - 365!/(365 - n)!*1/365**n)/100)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:49:51) 
-- CODE:
from math import factorial
n=float(input("Digite um numero: "))
factorial(n)= ((1 - 365/(365 - n)*1/365**n)/100)

print(round(p, 2))

-- ERROR:
File "XXXX", line 3
    factorial(n)= ((1 - 365/(365 - n)*1/365**n)/100)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:50:26) 
-- CODE:
from math import factorial
n=float(input("Digite um numero: "))
factorial(n)= ((1 - 365/(365 - n)*1/365**n)/100)

print(round(factorial(n), 2))

-- ERROR:
File "XXXX", line 3
    factorial(n)= ((1 - 365/(365 - n)*1/365**n)/100)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:43:23) 
-- CODE:
from math import factorial
n=float(input("Digite um numero: "))
a= 1 - 365 factorial(n)/(365 - n)factorial(n)*1/365**n

print(round(a, 2))

-- ERROR:
File "XXXX", line 3
    a= 1 - 365 factorial(n)/(365 - n)factorial(n)*1/365**n
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:44:16) 
-- CODE:
from math import factorial
n=float(input("Digite um numero: "))
a= 1 - (365)factorial(n)/((365 - n)factorial(n))*1/365**n

print(round(a, 2))

-- ERROR:
File "XXXX", line 3
    a= 1 - (365)factorial(n)/((365 - n)factorial(n))*1/365**n
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:19:49) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
a=1-(365factorial(n))/(365-n)factorial(n)*1/365**2

print(round(a, 2))

-- ERROR:
File "XXXX", line 3
    a=1-(365factorial(n))/(365-n)factorial(n)*1/365**2
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:20:08) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
a=1-(365 factorial(n))/(365-n)factorial(n)*1/365**2

print(round(a, 2))

-- ERROR:
File "XXXX", line 3
    a=1-(365 factorial(n))/(365-n)factorial(n)*1/365**2
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:21:05) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
a=1-(365!/(365-n)!*1/365**2)

print(round(a, 2))

-- ERROR:
File "XXXX", line 3
    a=1-(365!/(365-n)!*1/365**2)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:21:35) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
a=1-(365/(365-n)*1/365**n)

print(round(a, 2))

-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:22:02) 
-- CODE:
from math import*
n=float(input("Digite um numero: "))
a=(1-(365/(365-n)*1/365**n))

print(round(a, 2))

-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:22:21) 
-- CODE:
from math import*
n=int(input("Digite um numero: "))
a=(1-(365/(365-n)*1/365**n))

print(round(a, 2))

-- OUTPUT:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
